# nostd

./: .gitignore  CMakeLists.txt  README.md  main.c  write.c  write.h
syscall/: exit.c  exit.h
syscalls/: write.c  write.h
